--- a/src/UI/About.xaml
+++ b/src/UI/About.xaml
@@ -14,66 +14,68 @@
     </WindowChrome.WindowChrome>
 
     <!-- Window Layout -->
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="32"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-
-        <!-- Titlebar -->
-        <Grid Grid.Row="0" Background="{StaticResource Brush.TitleBar}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-
-            <!-- LOGO -->
-            <Path Margin="6,0,2,0" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Info}"/>
-
-            <!-- Title -->
-            <Label Grid.Column="1" Content="{StaticResource Text.About}" FontWeight="Light"/>
-
-            <!-- Close Button -->
-            <Button Click="Quit" Width="32" Grid.Column="3" WindowChrome.IsHitTestVisibleInChrome="True">
-                <Button.Style>
-                    <Style TargetType="{x:Type Button}" BasedOn="{StaticResource Style.Button.HighlightHover}">
-                        <Style.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="Red"/>
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </Button.Style>
-
-                <Path Width="10" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Close}"/>
-            </Button>
-        </Grid>
-
-        <Grid Grid.Row="1" Background="{StaticResource Brush.Window}">
+    <Border BorderBrush="{StaticResource Brush.Border3}" BorderThickness="1">
+        <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="90"/>
-                <RowDefinition Height="40"/>
                 <RowDefinition Height="32"/>
-                <RowDefinition Height="24"/>
-                <RowDefinition Height="24"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <StackPanel Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,6,0,0">
-                <Path Width="64" Height="64" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Git}" Fill="{StaticResource Brush.Logo}"/>
-            </StackPanel>
+            <!-- Titlebar -->
+            <Grid Grid.Row="0" Background="{StaticResource Brush.TitleBar}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
 
-            <Label Grid.Row="1" Content="{StaticResource Text.About.Title}" HorizontalContentAlignment="Center" VerticalContentAlignment="Bottom" FontSize="18" FontWeight="Bold"/>
-            <Label Grid.Row="2" x:Name="version" HorizontalContentAlignment="Center" FontSize="11"/>
+                <!-- LOGO -->
+                <Path Margin="6,0,2,0" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Info}"/>
 
-            <Label Grid.Row="3" HorizontalContentAlignment="Center" FontSize="11">
-                <Hyperlink RequestNavigate="OpenSource" NavigateUri="https://gitee.com/sourcegit/SourceGit.git">
-                    <Run Text="https://gitee.com/sourcegit/SourceGit.git"/>
-                </Hyperlink>
-            </Label>
+                <!-- Title -->
+                <Label Grid.Column="1" Content="{StaticResource Text.About}" FontWeight="Light"/>
 
-            <Label Grid.Row="4" Content="Copyright © sourcegit 2021. All rights reserved." HorizontalContentAlignment="Center" FontSize="11"/>
+                <!-- Close Button -->
+                <Button Click="Quit" Width="32" Grid.Column="3" WindowChrome.IsHitTestVisibleInChrome="True">
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource Style.Button.HighlightHover}">
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="Red"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+
+                    <Path Width="10" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Close}"/>
+                </Button>
+            </Grid>
+
+            <Grid Grid.Row="1" Background="{StaticResource Brush.Window}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="90"/>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="32"/>
+                    <RowDefinition Height="24"/>
+                    <RowDefinition Height="24"/>
+                </Grid.RowDefinitions>
+
+                <StackPanel Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,6,0,0">
+                    <Path Width="64" Height="64" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Git}" Fill="{StaticResource Brush.Logo}"/>
+                </StackPanel>
+
+                <Label Grid.Row="1" Content="{StaticResource Text.About.Title}" HorizontalContentAlignment="Center" VerticalContentAlignment="Bottom" FontSize="18" FontWeight="Bold"/>
+                <Label Grid.Row="2" x:Name="version" HorizontalContentAlignment="Center" FontSize="11"/>
+
+                <Label Grid.Row="3" HorizontalContentAlignment="Center" FontSize="11">
+                    <Hyperlink RequestNavigate="OpenSource" NavigateUri="https://gitee.com/sourcegit/SourceGit.git">
+                        <Run Text="https://gitee.com/sourcegit/SourceGit.git"/>
+                    </Hyperlink>
+                </Label>
+
+                <Label Grid.Row="4" Content="Copyright © sourcegit 2021. All rights reserved." HorizontalContentAlignment="Center" FontSize="11"/>
+            </Grid>
         </Grid>
-    </Grid>
+    </Border>
 </Window>
