--- a/src/UI/Blame.xaml
+++ b/src/UI/Blame.xaml
@@ -14,16 +14,18 @@
     </WindowChrome.WindowChrome>
 
     <!-- Window Content -->
-    <Border>
+    <Border BorderBrush="{StaticResource Brush.Border3}">
         <!-- Fix Maximize BUG -->
         <Border.Style>
             <Style TargetType="{x:Type Border}">
                 <Style.Triggers>
                     <DataTrigger Binding="{Binding WindowState, ElementName=me}" Value="Maximized">
                         <Setter Property="Margin" Value="6"/>
+                        <Setter Property="BorderThickness" Value="0"/>
                     </DataTrigger>
                     <DataTrigger Binding="{Binding WindowState, ElementName=me}" Value="Normal">
                         <Setter Property="Margin" Value="0"/>
+                        <Setter Property="BorderThickness" Value="1"/>
                     </DataTrigger>
                 </Style.Triggers>
             </Style>
