--- a/src/UI/FolderDialog.xaml
+++ b/src/UI/FolderDialog.xaml
@@ -14,7 +14,7 @@
     </WindowChrome.WindowChrome>
 
     <!-- Window Layout -->
-    <Border Background="{StaticResource Brush.Window}">
+    <Border Background="{StaticResource Brush.Window}" BorderThickness="1" BorderBrush="{StaticResource Brush.Border3}">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="32"/>
