style<Theme>: colors for light theme

--- a/src/Resources/Themes/Light.xaml
+++ b/src/Resources/Themes/Light.xaml
@@ -8,16 +8,17 @@
     <SolidColorBrush x:Key="Brush.NewPageHover" Color="#1D000000"/>
     <SolidColorBrush x:Key="Brush.Popup" Color="White"/>
     <SolidColorBrush x:Key="Brush.Contents" Color="White"/>
-    <SolidColorBrush x:Key="Brush.Badge" Color="#FF8F8F8F"/>
-    <SolidColorBrush x:Key="Brush.CommitViewer" Color="#FFF2F2F2"/>
-    <SolidColorBrush x:Key="Brush.GroupBar" Color="#FFCDCDCD"/>
-    <SolidColorBrush x:Key="Brush.GroupContent" Color="#FFE8E8E8"/>
+    <SolidColorBrush x:Key="Brush.Badge" Color="#FFAFAFAF"/>
+    <SolidColorBrush x:Key="Brush.CommitViewer" Color="#FFF0F0F0"/>
+    <SolidColorBrush x:Key="Brush.GroupBar" Color="#FFE8E8E8"/>
+    <SolidColorBrush x:Key="Brush.GroupContent" Color="#FFF8F8F8"/>
     <SolidColorBrush x:Key="Brush.Decorator" Color="#FFBDBDBD"/>
     <SolidColorBrush x:Key="Brush.Conflict" Color="#FF836C2E"/>
     
     <SolidColorBrush x:Key="Brush.Border1" Color="#FF898989"/>
     <SolidColorBrush x:Key="Brush.Border2" Color="#FFCFCFCF"/>
     <SolidColorBrush x:Key="Brush.Border3" Color="#FFEFEFEF"/>
+    <SolidColorBrush x:Key="Brush.Border4" Color="#FFF2F2F2"/>
     <SolidColorBrush x:Key="Brush.FG1" Color="#FF1F1F1F"/>
     <SolidColorBrush x:Key="Brush.FG2" Color="#FF6F6F6F"/>
     <SolidColorBrush x:Key="Brush.FG3" Color="#FFFFFFFF"/>
